@@ -1,1 +1,5 @@
 # CSE331-project
+# CAUTION
+##### The jar file must be opened using terminal by this command "but change the path with the actual path in your pc"
+## The command
+##### java --module-path ".\javafx-sdk-19.0.2.1\lib" --add-modules javafx.controls,javafx.fxml -jar one.jar
